--- a/README
+++ b/README
@@ -1,5 +1,4 @@
 Please note that this is an old implementation of the assigment. My solution uses
-my implementation of semaphores. Since  Java now supports semaphores , so don't use mine.
-
+my implementation of semaphores. Since Java now supports semaphores  don't use mine.  
 
 franco
